--- a/patch.yaml
+++ b/patch.yaml
@@ -10,3 +10,4 @@
   - name: Patching Completed. Rebooting the server
     ansible.builtin.reboot:
       msg: "Rebooting machine in 5 seconds"
+      boot_time_command: uptime | cut -d ' ' -f 5
